--- a/package.json
+++ b/package.json
@@ -1676,7 +1676,7 @@
         "webpack": "^4.46.0",
         "webpack-cli": "^3.3.12"
     },
-    "displayName": "Cortex-Debug",
+    "displayName": "Venus's Cortex-Debug",
     "engines": {
         "vscode": "^1.52.0"
     },
@@ -1690,10 +1690,10 @@
     "main": "./dist/extension",
     "name": "cortex-debug",
     "preview": true,
-    "publisher": "marus25",
+    "publisher": "keane-k1",
     "repository": {
         "type": "git",
-        "url": "https://github.com/Marus/cortex-debug.git"
+        "url": "https://github.com/keane-k1/cortex-debug.git"
     },
     "scripts": {
         "vscode:prepublish": "webpack --mode production",
